src/app/user/[userId]/calendar/calendar.css
.fc-event {
    min-height: 12px;
    font-size: 10px;
}

.fc .fc-daygrid-day-number {
    font-size: 0.8rem;
    padding: 4px 1px 2px 1px
}

.fc-multimonth-daygrid-table tr {
    height: 70px !important;
}

.fc {
    padding: 10px;
}

.fc .fc-button-primary {
    background-color: #1976d2;
    border: 0
}

.fc .fc-toolbar.fc-header-toolbar {
    margin-bottom: 10px
}

/* Title of custom events*/
.fc-daygrid-block-event .fc-event-time, .fc-daygrid-block-event .fc-event-title {
    font-size: 0.85em;
    color: lightgray;
}

/* Title of block events */
.fc .fc-bg-event .fc-event-title {
    margin-left: 0;
    margin-right: 0;
    padding: 0.5em 1em 0.5em 0.5em;
    border-top-right-radius: 1em;
    border-bottom-right-radius: 1em;
    position: absolute;
    bottom: 0;
    left: 0;
    background-color: white;
    color: black;
    font-weight: bold;
    font-size: clamp(0.6em, 2vw, 3em);
}

.fc .fc-bg-event {
    --fc-bg-event-opacity: 0.5;
}

/* Allow clicks to pass through events */
.fc-daygrid-event-harness {
    pointer-events: none;
}

